// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ValidationError correctly 1`] = `
.emotion-0 {
  color: #B30029;
  font-size: 12px;
  margin-top: 2px;
  margin-left: 1px;
  opacity: 0;
  display: none;
  pointer-events: none;
  text-align: left;
  -webkit-transition: opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  opacity: 1;
  display: initial;
}

<div>
  <div
    aria-atomic={true}
    aria-live="assertive"
    className="emotion-0"
    id="error_foo"
  >
    Error Text
  </div>
</div>
`;

exports[`renders ValidationError correctly when show is false 1`] = `
.emotion-0 {
  color: #B30029;
  font-size: 12px;
  margin-top: 2px;
  margin-left: 1px;
  opacity: 0;
  display: none;
  pointer-events: none;
  text-align: left;
  -webkit-transition: opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
}

<div>
  <div
    aria-atomic={true}
    aria-live="assertive"
    className="emotion-0"
    id="error_foo"
  >
    Error Text
  </div>
</div>
`;
